# qiprng

./: .Rprofile  .clang-format  .clang-format-ignore  .gitignore  .last_doc_generation  .markdownlint.json  .mintignore  .pre-commit-config.yaml  CHANGELOG-0.2.6.md  CHANGELOG.md  CI_CD_GUIDE.md  CMakeLists.txt  COMPREHENSIVE_REVIEW_REPORT.md  CONTRIBUTING.md  DESCRIPTION  INSTALL  INSTALL.txt  LICENSE  MATH  MATH.Md  Makefile.docs  Makefile.format  NAMESPACE  NEWS.md  README  README.Md  _pkgdown.yml  arithmetic_optimization_analysis.md  configure  configure.win  discriminants.csv  final_test_report.rds  mint.json  newprd.txt  package-lock.json  qiprng.Rproj  run_tests.R  test_benchmarks.R  test_comprehensive.R  test_crypto_security.R  (+9 more)
R/: RcppExports.R  advanced_tests.R  bootstrap_framework.R  caching_framework.R  demo_config_usage.R  demo_effect_sizes.R  demo_integrated_system.R  demo_memory_management.R  demo_p_value_adjustment.R  discriminant_reports.R  discriminant_tests.R  excellent_discriminants.R  excellent_discriminants_data.R  extended_distributions.R  prng_interface.R  qiprng-package.R  quarto_report_generator.R  statistical_testing.R  validation_suite.R  zzz.R
R/statisticaltests/: additional_wrappers.R  apply_test_fixes.R  basic_tests.R  benchmarking.R  binary_tests.R  cached_basic_tests.R  classical_tests.R  comprehensive_external_tests.R  comprehensive_generator_comparison.R  comprehensive_reporting.R  comprehensive_visualizations.R  compression_tests.R  compression_tests_bootstrap.R  config_manager.R  correlation_tests.R  edge_case_tests.R  effect_sizes.R  external_tests.R  external_tests_enhanced.R  external_wrappers.R  generator_comparison.R  integrated_memory_runner.R  integrated_test_runner.R  internal_test_wrappers.R  memory_manager.R  multidim_reftools_compat.R  multidim_specific_tests.R  multidim_tests.R  multidim_tests_fixes.R  multidim_visualizations.R  multidim_wrapper.R  parallel_runner.R  performance_benchmarking.R  progress_monitor.R  result_aggregator.R  runs_tests.R  simple_test_implementations.R  unified_reporting.R  validation_reporting.R  vectorized_operations.R  (+6 more)
analysis/: PATTERNS_AND_FINDINGS.md  README.md  comprehensive_generator_comparison_refactored.R
analysis/data/: excellent_discriminants.csv
analysis/reports/: discriminant_analysis_report.html  discriminant_analysis_report.qmd
analysis/scripts/: run_discriminant_analysis.R  verify_results.R
docs/: 404.html  CHANGELOG.html  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE-text.html  PACKAGE_STATUS.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml  statistical-test-results.md  task-jump-ahead-optimization.md  v0.5.0_features.md
docs/articles/: index.html  mathematical_foundation.html
docs/news/: index.html
docs/reference/: .pkgenv.html  (+107 more)
inst/: WORDLIST  pkgdown.yml
man/: QPRNG_TEST_CATEGORIES.Rd  assess_discriminant_quality.Rd  basic_tests.Rd  benchmark_large_generation.Rd  benchmark_qiprng.Rd  bootstrap_conf_interval.Rd  bootstrap_framework.Rd  bootstrap_p_value.Rd  cached_acf.Rd  cached_compress.Rd  cached_pacf.Rd  cached_spectrum.Rd  cached_test_result.Rd  cleanupPRNG.Rd  cleanup_prng.Rd  clear_qiprng_cache.Rd  clear_test_cache.Rd  compare_rng_quality.Rd  convert_qmd_to_rmd.Rd  createPRNG.Rd  create_excellent_prng_config.Rd  create_prng_test_suite.Rd  create_visualizations.Rd  default_config.Rd  default_test_config.Rd  dot-onLoad.Rd  dot-onUnload.Rd  export_cached_results.Rd  generatePRNG.Rd  generate_cauchy.Rd  generate_detailed_report.Rd  generate_excellent_random.Rd  generate_levy_stable.Rd  generate_multivariate_normal.Rd  generate_pareto.Rd  generate_quarto_report.Rd  generate_recommendations.Rd  generate_summary_stats.Rd  generate_with_copula.Rd  generate_with_discriminant.Rd  (+69 more)
mintlify/: DEPLOYMENT.md  README.md  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
scripts/: DOCUMENTATION_PIPELINE.md  cpp_to_mintlify.py  generate_all_docs.sh  generate_mintlify_complete.R  generate_mintlify_docs.R  generate_mintlify_docs_fixed.R  regenerate_docs.sh  roxygen2_to_mintlify.R  roxygen2_to_mintlify_fixed.R  test_doc_generation.sh  test_documentation.sh  test_mintlify_deployment.sh  validate_docs.sh  validate_mintlify_api.py
src/: Makevars  RcppExports.cpp  bit_operations.hpp  buffer_manager.hpp  cache_aligned.hpp  cache_optimized.hpp  code_concat_output.markdown  crypto_mixer.cpp  crypto_mixer.hpp  deterministic_rng.hpp  distribution_generator.hpp  enhanced_prng.cpp  enhanced_prng.hpp  enhanced_prng_original.cpp.bak  enhanced_prng_original.hpp.bak  enhanced_prng_refactored.hpp  extended_distributions.cpp  extended_distributions.hpp  hardware_acceleration.hpp  matrix_mpfr.hpp  mpfr_pool.hpp  multi_qi.cpp  multi_qi.hpp  multi_qi_optimized.cpp  multi_qi_optimized.hpp  parallel_jump_ahead.hpp  precision_utils.hpp  prng_common.hpp  prng_config.hpp  prng_utils.cpp  prng_utils.cpp.fixed  prng_utils.cpp.new  prng_utils.hpp  prng_warnings.cpp  quadratic_irrational.cpp  quadratic_irrational.hpp  quadratic_irrational_jump.cpp  rcpp_exports.cpp  simd_operations.hpp  symbols.rds  (+6 more)
tests/: TEST_RESULTS_SUMMARY.md  TEST_SUITE_ORGANIZATION.md  benchmark_parallel.R  complete_statistical_tests.R  final_statistical_tests.R  final_test_report.rds  quick_validation.R  run_all_tests.sh  run_all_tests_comprehensive.R  run_all_tests_with_log.R  run_critical_tests.sh  run_discriminant_validation.R  run_statistical_tests_simple.R  statistical_test_results.md  statistical_test_results.rds  statistical_validation.R  test_apple_silicon.R  test_comprehensive_v050.R  test_extended_distros.R  test_fixes.R  test_medium_fixes.cpp  test_mixing_simple.cpp  test_mixing_strategies.R  test_numerical_stability.R  test_precision_improvements.cpp  test_precision_standalone.cpp  test_thread_safety.cpp  test_thread_safety_fix.R  test_thread_safety_fix.cpp  test_tls_cleanup.R  test_v060_final.R  test_v0_5_0_enhancements.R  test_v0_5_0_enhancements.cpp  test_v0_5_0_fixes.R  test_v0_5_0_simple.R  testthat.R
validation/: NIST_VALIDATION.md
vignettes/: mathematical_foundation.Rmd
(+351 files in other folders)
